--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -6,7 +6,7 @@ $picture: url("../img/carousel/carousel-web-design.jpg");
 $fallback-colour: #472e3c;
 $gradient-overlay: linear-gradient(to right, black, transparent);
 $text-colour: #fff;
-$button-colour: themeget-colour-for-service("web-design");
+$button-colour: theme.get-colour-for-service("web-design");
 
 $heading-size: utility.px-to-rem(48px);
 $para-size: utility.px-to-rem(20px);
@@ -14,6 +14,7 @@ $button-size: utility.px-to-rem(20px);
 
 $button-width: 14rem;
 $button-height: 3.3rem;
+$button-icon-name: "right-arrow";
 
 // when viewport width is larger than breakpoint, hero height should be:
 $height-by-breakpoint: (
@@ -23,20 +24,52 @@ $height-by-breakpoint: (
 );
 
 #hero-image {
+    @include utility.hero-image(($gradient-overlay, $picture), $fallback-colour);
+
     box-sizing: border-box;
     height: utility.px-to-rem(600px);
     padding: utility.px-to-rem(172px) 0 0;
-
-    @include utility.hero-image(($gradient-overlay, $picture), $fallback-colour);
-    // background-image: $gradient-overlay, $picture;
-    // background-color: $fallback-colour;
-    // background-position: center;
-    // background-repeat: no-repeat;
-    // background-size: cover;
     
     color: $text-colour;
     text-align: center;
+    
+    h2 {
+        font-size: $heading-size;
+        font-weight: 400;
+        text-transform: uppercase;
+        margin: 0 0 0.5em;
+    }
+    
+    p {
+        font-size: $para-size;
+        line-height: 1.8;
+        margin: 0;
+    }
+    
+    .call-to-action {
+        @include utility.button(
+            $background-colour: $button-colour,
+            $text-colour: $text-colour,
+            $font-size: $button-size,
+            $width: $button-width,
+            $height: $button-height
+        );
+        
+        @include utility.above-breakpoint("small") {
+            margin-left: 0;
+        }
 
+        // generate icon after the text
+        &::after {
+            @include icons.icon;
+            content: icons.icon-unicode-from-name($button-icon-name);
+            font-size: 0.75em;
+            padding-left: 0.3rem;
+        }
+    }
+    
+
+    // height changes at several breakpoints
     @each $breakpoint-name, $height in $height-by-breakpoint
     {
         @include utility.above-breakpoint($breakpoint-name) {
@@ -47,37 +80,5 @@ $height-by-breakpoint: (
     @include utility.above-breakpoint("small") {
         text-align: left;
         padding: 7.5em 9ch;
-    }
-
-    h2 {
-        font-size: $heading-size;
-        font-weight: 400;
-        text-transform: uppercase;
-        margin: 0 0 0.5em;
-    }
-
-    p {
-        font-size: $para-size;
-        line-height: 1.8;
-        margin: 0;
-    }
-
-    a {
-        @include utility.button(
-            $background-colour: $button-colour,
-            $text-colour: $text-colour,
-            $font-size: $button-size,
-            $width: $button-width,
-            $height: $button-height
-        );
-
-        @include utility.above-breakpoint("small") {
-            margin-left: 0;
-        }
-    }
-
-    // selects the icon
-    span::before {
-        font-size: 0.75em;
     }
 }
