add flex-center mixin

--- a/scss/utility/_index.scss
+++ b/scss/utility/_index.scss
@@ -1,7 +1,8 @@
 @forward "breakpoints";
 @forward "button";
+@forward "flex-center";
 @forward "hero-image";
-@forward "margin-x-centre";
+@forward "margin-x-center";
 @forward "px-to-rem";
 @forward "rounded-corners";
 @forward "wrapped-flex";
