--- a/scss/layout/_services.scss
+++ b/scss/layout/_services.scss
@@ -29,7 +29,7 @@ $button-height: 3rem;
     margin: 2rem 1rem;
     
     a {
-        @include utility.margin-x-centre;
+        @include utility.margin-x-center;
 
         display: flex;
         flex-direction: column;
@@ -122,7 +122,7 @@ $button-height: 3rem;
     
     // past extra-small first 3 cards remain as they are but rest are put into a 2x2 grid
     @include utility.above-breakpoint("extra-small") {
-        @include utility.margin-x-centre;
+        @include utility.margin-x-center;
         width: utility.px-to-rem(750px);
 
         .other-services {
