--- a/scss/utility/_button.scss
+++ b/scss/utility/_button.scss
@@ -1,16 +1,16 @@
 @use "rounded-corners";
+@use "flex-center";
 
 @mixin button(
         $background-colour, $text-colour, $font-size,
         $width: 12rem, $height: 2.5rem
     ) {
     @include rounded-corners.rounded-corners;
+    @include flex-center.flex-center;
 
-    display: block;
     margin: 2em auto;
     width: $width;
-    padding-top: ($height - $font-size) * 0.5;
-    padding-bottom: ($height - $font-size) * 0.5;
+    height: $height;
 
     text-align: center;
     text-transform: uppercase;
