--- a/scss/utility/_index.scss
+++ b/scss/utility/_index.scss
@@ -1,8 +1,12 @@
+@forward "badge-row-colour-on-hover";
 @forward "breakpoints";
 @forward "button";
+@forward "colour-on-hover";
+@forward "convert";
 @forward "flex-center";
+@forward "flex-row-container";
 @forward "hero-image";
 @forward "margin-x-center";
-@forward "px-to-rem";
 @forward "rounded-corners";
+@forward "short-horizontal-line";
 @forward "wrapped-flex";
