colour social media links on hover

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -104,5 +104,12 @@ footer {
             text-align: center;
             font-size: 2rem;
         }
+
+        @each $social-media-name, $colour in theme.$social-media-colours {
+            a.#{$social-media-name}:hover {
+                background-color: $colour;
+                text-decoration: none;
+            }
+        }
     }
 }
