--- a/scss/theme/_netmatters.scss
+++ b/scss/theme/_netmatters.scss
@@ -29,6 +29,12 @@ $service-icons: (
     "developer-training": "student-cap",
 );
 
+$social-media-colours: (
+    "facebook": #3b5998,
+    "twitter": #00aced,
+    "linkedin": #0077b5,
+);
+
 $social-media-icons: (
     "facebook": "facebook",
     "twitter": "twitter",
