--- a/scss/layout/_nav-bar.scss
+++ b/scss/layout/_nav-bar.scss
@@ -78,7 +78,7 @@ nav {
         }
     }
 
-    @include utility.above-breakpoint("small") {
+    @include utility.above-breakpoint("medium") {
         display: block;
     }
 }
