--- a/scss/utility/_breakpoints.scss
+++ b/scss/utility/_breakpoints.scss
@@ -5,8 +5,8 @@
 // active when viewport width exceeds the associated value.
 $_breakpoints: (
     "mobile": 0px,
-    "extra-small": 768px,
-    "small": 991px,
+    "small": 768px,
+    "medium": 991px,
     "large": 1260px,
 );
 
